Adjusted JS on kincommunity.html to apply smoother scrolling. Updated home page tiles to match theme.

--- a/index.html
+++ b/index.html
@@ -351,38 +351,38 @@
 
 							<!-- Tile 2: Giddy's Universe -->
 							<article class="featured-service-item--featured">
-								<span class="image left"><img src="/assets/images/giddys-4x3.png"
+								<span class="image left"><img src="/assets/images/giddys-card-4x3.jpeg"
 										alt="e𝕏PB Business Promote Icon"></span>
 
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
 									<h3 class="quick-start-title">Giddy's Universe</h3>
 									<p class="align-center">Family Goods · Kids Toys · Collectibles · Animated Series</p>
-									<button class="round-button"><a href="/ofidtales.html">Explore Now</a></button>
+									<button class="round-button"><a href="/ofidtales.html">Watch & Shop</a></button>
 								</div>
 							</article>
 
 							<!-- Tile 3: Explore Services -->
 							<article class="featured-service-item--featured">
-								<span class="image left"><img src="/assets/images/expb-member-explore4.png"
+								<span class="image left"><img src="/assets/images/expb-member-explore5.png"
 										alt="e𝕏PB Member Explore Icon"></span>
 
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Experience </br>e𝕏P Web3+</h3>
-									<p class="align-center">Try Apps · Join Communities · Earn Rewards</p>
+									<h3 class="quick-start-title">E𝕏perience </br>Web3+</h3>
+									<p class="align-center">Try Apps · Grow Your Business · Earn Rewards</p>
 									<button class="round-button"><a href="/explore.html">Explore Now</a></button>
 								</div>
 							</article>
 
 							<!-- Tile 4: Learn -->
 							<article class="featured-service-item--featured">
-								<span class="image left"><img src="/assets/images/expb-learn-4x3.png"
+								<span class="image left"><img src="/assets/images/expb-learn-card-4x3.png"
 										alt="e𝕏PB Business Promote Icon"></span>
 
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Learn ABout Web3+</h3>
+									<h3 class="quick-start-title">Learn About Web3+</h3>
 									<p class="align-center">Fundamentals · Basics · Tips · Security</p>
 									<button class="round-button"><a href="/explore.html#article-featured">Go to Articles</a></button>
 								</div>
