--- a/pages/affiliate.html
+++ b/pages/affiliate.html
@@ -330,7 +330,7 @@
 								<h3>Buy & Sell Crypto Securely</h3>
 								<div class="button-container">
 									<a href="https://kraken.pxf.io/xLox1A"
-										class="button">Sign Up</a>
+										class="button">Get Started</a>
 								</div>
 								<p>
 									Kraken Exchange makes getting into crypto simple—whether you’re buying your first token or moving
