Dobby SVG added to kincommunity.html

--- a/kincommunity.html
+++ b/kincommunity.html
@@ -379,7 +379,8 @@
 						<div class="box-content">
 							<a href="https://x.com/Dobby_Coin" target="_blank">
 								<span class="image">
-									<img src="assets/images/logo-dobby.jpg" alt="DOBBY Logo">
+									<img src="assets/images/logo-dobby-svg.svg" alt="DOBBY Logo" width="300"
+										height="300">
 								</span>
 							</a>
 							<h3>DOBBY</h3>
