Updated index.html main tile images and text labels.

--- a/index.html
+++ b/index.html
@@ -369,7 +369,7 @@
 
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">E𝕏perience </br>Web3+</h3>
+									<h3 class="quick-start-title">E𝕏pand With</br>Web3+</h3>
 									<p class="align-center">Try Apps · Grow Your Business · Earn Rewards</p>
 									<button class="round-button"><a href="/explore.html">Explore Now</a></button>
 								</div>
@@ -382,8 +382,8 @@
 
 								<!-- DESCRIPTION -->
 								<div class="quick-start-content">
-									<h3 class="quick-start-title">Learn About Web3+</h3>
-									<p class="align-center">Fundamentals · Basics · Tips · Security</p>
+									<h3 class="quick-start-title">Learn About Digital Assets</h3>
+									<p class="align-center">Fundamentals · Basics · Tips · Portfolio Growth · Security</p>
 									<button class="round-button"><a href="/explore.html#article-featured">Go to Articles</a></button>
 								</div>
 							</article>
